Fixed wrapping on the SKU list in the PDP

--- a/src/less/modules/_prepend-input.less
+++ b/src/less/modules/_prepend-input.less
@@ -1,5 +1,7 @@
 .fc-prepend-input {
-  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  
   &__icon {
     .border-radius(3px 0 0 3px);
     .inline-block();
